--- a/appspec.yml
+++ b/appspec.yml
@@ -1,12 +1,12 @@
 version: 0.0
-os: ubuntu
+os: linux
 files:
   - source: /frontend
     destination: /home/ubuntu/hashtap/hashtap-app/frontend
 hooks:
   ApplicationStop:
-    - location: /before-install.bat
+    - location: /before-install.sh
       timeout: 900  
   BeforeInstall:
-    - location: /before-install.bat
+    - location: /before-install.sh
       timeout: 900
