--- a/appspec.yml
+++ b/appspec.yml
@@ -4,3 +4,6 @@ files:
   - source: /frontend
     destination: /home/ubuntu/hashtap/hashtap-app/frontend
 hooks:
+  BeforeInstall:
+    - location: beforeInstall.sh
+      timeout: 600
