--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,40 @@ files:
   - source: /frontend
     destination: /home/ubuntu/hashtap/hashtap-app/frontend
 hooks:
+  # ApplicationStop:
+  #   - location: 
+  #     timeout:
+  #     runas:
+  #   - location: 
+  #     timeout:
+  #     runas: 
+# During the BeforeInstall deployment lifecycle event, run the commands 
+#   in the script specified in "location".
   BeforeInstall:
     - location: beforeInstall.sh
       timeout: 600
+# During the AfterInstall deployment lifecycle event, run the commands 
+#   in the script specified in "location".
+  # AfterInstall:
+  #   - location:     
+  #     timeout: 
+#     - location: 
+#       timeout:
+#       runas:
+# # During the ApplicationStart deployment lifecycle event, run the commands 
+# #   in the script specified in "location".
+  ApplicationStart:
+    - location: applicationStart.sh     
+      timeout: 600
+#     - location: 
+#       timeout:
+#       runas:
+# # During the ValidateService deployment lifecycle event, run the commands 
+# #   in the script specified in "location".
+#   ValidateService:
+#     - location:     
+#       timeout: 
+#       runas:
+#     - location: 
+#       timeout:
+#       runas:
